[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Ido.Slonimsky <islonimsky@ironscales.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
tox = "^3.27.1"
numpy = "^1.23.5"
networkx = "^2.8.8"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
